--- a/changelog/0.5.2.md
+++ b/changelog/0.5.2.md
@@ -1,7 +1,9 @@
 Including issues:
 - fsanaulla/chronicler#153 Adding `readUnsafe` method to `InfluxReader`. Macros updated to support `unsafeRead`
 - fsanaulla/chronicler#154 Moving url backend to [request-scala](https://github.com/lihaoyi/requests-scala)
-- fsanaulla/chronicler$158 Adding enc param to writeFromFile api, setting default encoding for response body parsers
+- fsanaulla/chronicler#158 Adding enc param to writeFromFile api, setting default encoding for response body parsers
+- fsanaulla/chronicler#163 Updating defaults from `Option[Enum]` to `Enum.None` defaults
+- fsanaulla/chronicler#142 Streaming support for url backend
 
 Contributors:
 - @fsanaulla
