--- a/changelog/0.5.2.md
+++ b/changelog/0.5.2.md
@@ -4,6 +4,7 @@ Including issues:
 - fsanaulla/chronicler#158 Adding enc param to writeFromFile api, setting default encoding for response body parsers
 - fsanaulla/chronicler#163 Updating defaults from `Option[Enum]` to `Enum.None` defaults
 - fsanaulla/chronicler#142 Streaming support for url backend
+- fsanaulla/chronicler#165 Scala 2.13 support
 
 Contributors:
 - @fsanaulla
