--- a/changelog/0.5.5.md
+++ b/changelog/0.5.5.md
@@ -1,5 +1,6 @@
 Including issues:
 - fsanaulla/chronicler#162 Streaming support for akka backend moved to pure akka http backend
+- fsanaulla/chronicler#157 Data compression in write
 
 Design refactoring:
 - Separate execution effect type, and response parser effect type. Updating `Functor` type-class. 
