Fix several typos across the project.

--- a/changelog/0.5.0.md
+++ b/changelog/0.5.0.md
@@ -2,7 +2,7 @@ Including issues:
 
 - fsanaulla/chronicler#129 Reference transparency in `InfluxReader[A]`, read method signature changed from `JArray => T` to `JArray => Either[Throwable, T]`, macros also updated
 - fsanaulla/chronicler#148 Reference transparency in `InfluxWriter[A]`, write method signature changed from `T => String` to `T => Either[Throwable, String]`, macros also updated
-- fsanaulla/chronicler#138 Core algerba simplification
+- fsanaulla/chronicler#138 Core algebra simplification
     - `WriteResult` changed to `Either[Throwwable, Int]`, where `Int` is response code value.
     - `QueryResult[A]` to `Either[Throwable, Array[A]]`
     - `GroupedResult[A]` to `Either[Throwable, Array[(Array[String], A)]]`
