--- a/changelog/0.5.5.md
+++ b/changelog/0.5.5.md
@@ -1,6 +1,6 @@
 Including issues:
 - fsanaulla/chronicler#162 Streaming support for akka backend moved to pure akka http backend
-- fsanaulla/chronicler#157 Data compression in write
+- fsanaulla/chronicler#157 Data compression in write/read
 - fsanaulla/chronicler#174 contributing.md
 
 Design refactoring:
