[SBT][NONE]: small refactoring

--- a/changelog/0.6.0.md
+++ b/changelog/0.6.0.md
@@ -1,5 +1,5 @@
 Including issues:
-- fsanaulla/chronicler#178 Updating AHC backend
+- fsanaulla/chronicler#178 Moving away from sttp to pure AHC backend
 
 Contributors:
 - @fsanaulla
