--- a/changelog/0.7.0.md
+++ b/changelog/0.7.0.md
@@ -4,6 +4,10 @@ Description:
 
 Overall project refacroting, update core internals
 
+Including issues:
+
+- fsanaulla/chronicler#211 token based auth support
+
 Contributors:
 
 - @fsanaulla
